--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,9 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# Alt key
 set $alt Mod1
+# Super (Windows) key
 set $mod Mod4
 
 # font for window titles. ISO 10646 = Unicode
@@ -29,13 +31,17 @@ bindsym $mod+Shift+Q kill
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
 
-# alternatively, you can use the cursor keys:
+# Custom window navigation keys
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# alternatively, you can use the cursor keys:
+# Personal navigation keys
+bindsynm $mod+F1 focus left
+bindsynm $mod+F2 focus right
+
+# Custom window moving keys
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
